[gd_scene load_steps=15 format=3 uid="uid://bdvqd3xumvy8j"]

[ext_resource type="Script" path="res://scenes/weapons/enemy_air_raid_bomb/enemy_air_raid_bomb.gd" id="1_klpwl"]
[ext_resource type="PackedScene" uid="uid://cltyyd03qhp1x" path="res://scenes/components/projectile_component/projectile_component.tscn" id="2_ottlf"]
[ext_resource type="Texture2D" uid="uid://bvtpr87gpv4y1" path="res://assets/sprites/shots/air_raid_bomb.png" id="3_dw4vy"]
[ext_resource type="PackedScene" uid="uid://ddwtfhud2pam6" path="res://scenes/components/hitbox_component/hitbox_component.tscn" id="4_s8skx"]
[ext_resource type="Texture2D" uid="uid://b12u6tg2a0hst" path="res://assets/sprites/vfx/explosions/explosion-a.png" id="8_xhk1q"]
[ext_resource type="AudioStream" uid="uid://dh1x4qmkoywop" path="res://assets/audios/explosions/retro_explosion_general_08.wav" id="9_fiuk8"]

[sub_resource type="Animation" id="Animation_mdgm5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ExplodeParticles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ExplodeSE:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ualya"]
resource_name = "flying"
length = 0.1
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_l81si"]
resource_name = "hit"
length = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ExplodeParticles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ExplodeSE:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2f8kg"]
_data = {
"RESET": SubResource("Animation_mdgm5"),
"flying": SubResource("Animation_ualya"),
"hit": SubResource("Animation_l81si")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_di64r"]
radius = 10.0125

[sub_resource type="CircleShape2D" id="CircleShape2D_ue5hh"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_mn3ev"]
particles_animation = true
particles_anim_h_frames = 8
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0rgvp"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
anim_speed_min = 1.0
anim_speed_max = 1.0

[node name="EnemyAirRaidBomb" type="StaticBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource("1_klpwl")

[node name="ProjectileComponent" parent="." instance=ExtResource("2_ottlf")]
speed = 250.0
auto_rotation = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2f8kg")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_dw4vy")
hframes = 3
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -0.5)
shape = SubResource("CircleShape2D_di64r")

[node name="TerrainRayCast" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(0, 17)
collision_mask = 129

[node name="HitboxComponent" parent="." instance=ExtResource("4_s8skx")]
collision_layer = 16
collision_mask = 6
damage = 5
oneshot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_ue5hh")
disabled = true
debug_color = Color(0.819608, 0.364706, 0.447059, 0.419608)

[node name="ExplodeSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_fiuk8")
volume_db = -23.363
pitch_scale = 1.2
bus = &"SE"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(3.6, 3.6)

[node name="ExplodeParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_mn3ev")
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_0rgvp")
texture = ExtResource("8_xhk1q")
lifetime = 0.5
one_shot = true

[connection signal="blocked" from="HitboxComponent" to="." method="_on_hitbox_component_blocked"]
[connection signal="hit" from="HitboxComponent" to="." method="_on_hitbox_component_hit"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
